tests/paczka1/small_fuzzy/58718110.err
Error in line 1: RDQM S211 33,8
Error in line 8: mgZlEJ5hz S416 25,5
Error in line 10: mgZlEJ5hz S330 83,6
